# ellie

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md
dev/win64/: build.bat  run.bat
docs/: building.txt  design.txt  todo.txt
release/: changelog.txt  license.txt
release/data/shaders/: default.frag  default.vert
src/: app.cpp  app.hpp  app_interface.cpp  app_interface.hpp  app_win64.cpp  core.cpp  core_shader.cpp  event_bus.hpp  events.hpp  events_old.hpp  game.cpp  global.hpp  log.cpp  logic.cpp  logic.hpp  main.cpp  platform.cpp  platform.hpp  platform_win64.cpp  process.hpp  process_manager.hpp  processes.hpp  renderer.hpp  renderer_opengl.cpp  resources.hpp  services.hpp  system_information.hpp  tasks.hpp  view.cpp  view.hpp  view_interface.hpp  view_opengl.cpp  view_opengl.hpp
src/refactoring/: core.cpp  library.cpp  renderer_opengl.cpp
